results/SVCOMP/conversational/log-StringValueOf03-2024_03_17_11_58_38.txt
public class StringValueOf03 {
    //@ requires arg != null;
    //@ requires arg.length() >= 8;
    //@ ensures \result <==> tmp.equals("fbbl");
    public static boolean f(String arg) {
        if (arg.length() < 8)
            return false;
        char[] charArray = {
            arg.charAt(0), arg.charAt(1), arg.charAt(2),
            arg.charAt(3), arg.charAt(4), arg.charAt(5),
            arg.charAt(6), arg.charAt(7)
        };
        String tmp = String.valueOf(charArray, 3, 3);
        return tmp.equals("fbbl");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf03.java:4: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("fbbl");
                             ^
  symbol:   variable tmp
  location: class StringValueOf03
1 error

public class StringValueOf03 {
    //@ requires arg != null;
    //@ requires arg.length() >= 8;
    //@ ensures \result <==> String.valueOf(new char[]{arg.charAt(3), arg.charAt(4), arg.charAt(5)}).equals("fbbl");
    public static boolean f(String arg) {
        if (arg.length() < 8)
            return false;
        char[] charArray = {
            arg.charAt(0), arg.charAt(1), arg.charAt(2),
            arg.charAt(3), arg.charAt(4), arg.charAt(5),
            arg.charAt(6), arg.charAt(7)
        };
        String tmp = String.valueOf(charArray, 3, 3);
        return tmp.equals("fbbl");
    }
}
